curve normals are sometime wrong #51665

Closed
opened 2017-05-30 12:07:34 +02:00 by matali23 · 10 comments

System Information
all

Blender Version
Broken: 94a3bc6

Short description of error
some curves get wrong normals, which makes grabing with 'normal' as orientation wrong.

Exact steps for others to reproduce the error
Open attached file curve normal wrong.blend
see how the translate manipulator is aligned to world axis instead of normal axis.
curve normal wrong.PNG
Note that this curve was created by the dxf importer, I don't know if it's related. Recreating the curve from scratch gives correct normals, but it's very time consuming.
Recalculating normals doesn't help.

**System Information** all **Blender Version** Broken: 94a3bc6 **Short description of error** some curves get wrong normals, which makes grabing with 'normal' as orientation wrong. **Exact steps for others to reproduce the error** Open attached file [curve normal wrong.blend](https://archive.blender.org/developer/F612835/curve_normal_wrong.blend) see how the translate manipulator is aligned to world axis instead of normal axis. ![curve normal wrong.PNG](https://archive.blender.org/developer/F612833/curve_normal_wrong.PNG) Note that this curve was created by the dxf importer, I don't know if it's related. Recreating the curve from scratch gives correct normals, but it's very time consuming. Recalculating normals doesn't help.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @matali23

Added subscriber: @matali23

Added subscriber: @ja12

Added subscriber: @ja12

The spline type is poly, not bezier. Set spline type button on the tool shelf to convert.

Creating a bezier and converting to poly gives the same result, so not sure if this a valid report.

The spline type is poly, not bezier. Set spline type button on the tool shelf to convert. Creating a bezier and converting to poly gives the same result, so not sure if this a valid report.
Author

poly or bezier, I don't see why the normals shouldn't be calculated correctly?

poly or bezier, I don't see why the normals shouldn't be calculated correctly?

Added subscriber: @bliblubli

Added subscriber: @bliblubli

I also agree normals should be the same whatever the type is.

Geometricaly speaking, a line doesn't has a unique valid normal in 3D space. But at least one axis must be aligned with the said line.

For consistency, Mesh, poly, bezier, etc. should show the exact same normal.

I also agree normals should be the same whatever the type is. Geometricaly speaking, a line doesn't has a unique valid normal in 3D space. But at least one axis must be aligned with the said line. For consistency, Mesh, poly, bezier, etc. should show the exact same normal.
Author

any news on this one, to model correctly, a proper normal orientation is required.

any news on this one, to model correctly, a proper normal orientation is required.

This issue was referenced by 004a143760

This issue was referenced by 004a14376073257079e77ef21579c5ae1036f0d3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51665
No description provided.