Fix T51665: No orientation for nurbs, polygons